IU-2020.2.3 <kevin@MacBook-Pro-4.local Update filetypes.xml, material_theme.xml, editor.xml, Bash.xml, debugger.xml	Create lightEdit.xml	Delete editor.codeinsight.xml

--- a/templates/Bash.xml
+++ b/templates/Bash.xml
@@ -6,7 +6,5 @@
       <option name="Bash" value="true" />
     </context>
   </template>
-  <template name="she" value="#!/bin/bash" description="shebang line" toReformat="false" toShortenFQNames="false">
-    <context />
-  </template>
+  <template name="she" value="#!/bin/bash" description="shebang line" toReformat="false" toShortenFQNames="false" />
 </templateSet>
